--- a/desktop-app/index.html
+++ b/desktop-app/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/app.css"/>
   <link rel="stylesheet" href="css/sweet-alert.css"/>
-
+  <script src="http://localhost:35729/livereload.js"></script> 
   <script src="js/error_handler.js"></script>
 
   <script src="js/vendor/angular.min.js"></script>
