fix unselected age range is colored too

--- a/desktop-app/index.html
+++ b/desktop-app/index.html
@@ -19,7 +19,7 @@
   <script src="js/vendor/angular-sanitize.min.js"></script>
   <script src="js/vendor/angular-translate.min.js"></script>
   <script src="js/vendor/ngAutocomplete.js"></script>
-  <script src="js/vendor/ng-range-slider.min.js"></script>
+  <script src="js/vendor/ng-range-slider.js"></script>
   <script src="js/vendor/angular-route.min.js"></script>
   <script src="js/vendor/angular-translate-loader-static-files.min.js"></script>
   <script src="js/vendor/jquery.min.js"></script>
